src/main/default/objects/DNBI__Credit_Decision_History__c/DNBI__Credit_Decision_History__c.object-meta.xml
<CustomObject>
    <description>This custom object hold the Credit Decision Section history records</description>
    <label>Credit Decision History</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Credit Decision History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Decision History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>