src/main/default/objects/DNBI__Credit_Decision_History__c/fields/DNBI__Account__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Decision History</relationshipLabel>
    <relationshipName>Credit_Decision_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>