src/main/default/objects/DNBI__Credit_Decision_History__c/fields/DNBI__Contract__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Credit Decision History</relationshipLabel>
    <relationshipName>Credit_Decision_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>