src/main/default/objects/DNBI__Credit_Decision_History__c/fields/DNBI__DnB_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>DNBI__DnB_Company_Name__c</fullName>
    <label>D&amp;B Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>