src/main/default/objects/DNBI__Credit_Decision_History__c/fields/DNBI__DnB_Early_Payment_Discount__c.field-meta.xml
<CustomField>
    <fullName>DNBI__DnB_Early_Payment_Discount__c</fullName>
    <label>Early Payment Discount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>