src/main/default/objects/DNBI__Credit_Decision_History__c/fields/DNBI__DnB_Status__c.field-meta.xml
<CustomField>
    <fullName>DNBI__DnB_Status__c</fullName>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>