src/main/default/objects/DNBI__Credit_Decision_History__c/fields/DNBI__Invoice__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>DNBI__Invoice__c</referenceTo>
    <relationshipLabel>Credit Decision History</relationshipLabel>
    <relationshipName>Credit_Decision_History</relationshipName>
    <type>Lookup</type>
</CustomField>