src/main/default/objects/DNBI__Credit_Decision_History__c/fields/DNBI__Lead__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Credit Decision History</relationshipLabel>
    <relationshipName>Credit_Decision_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>