src/main/default/objects/DNBI__Credit_Decision_History__c/fields/DNBI__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Credit Decision History</relationshipLabel>
    <relationshipName>Credit_Decision_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>