src/main/default/objects/DNBI__Credit_Decision_History__c/listViews/DNBI__All.listView-meta.xml
<ListView>
    <fullName>DNBI__All</fullName>
    <columns>NAME</columns>
    <columns>DNBI__DnB_Application_ID__c</columns>
    <columns>DNBI__Account__c</columns>
    <columns>DNBI__Lead__c</columns>
    <columns>DNBI__Opportunity__c</columns>
    <columns>DNBI__Contract__c</columns>
    <columns>DNBI__DnB_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>